--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "typescript.tsc.autoDetect": "off",
     "cSpell.words": [
         "mytools",
+        "tstool",
+        "YOUDAO",
         "zack"
     ]
 }
