--- a/package.json
+++ b/package.json
@@ -10,31 +10,26 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:mytools-zack.helloWorld",
-	"onLanguage:json"
+    "onCommand:mytools-zack.json2ts",
+    "onLanguage:typescript",
+    "onLanguage:json",
+    "onLanguage:javascript"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "mytools-zack.helloWorld",
-        "title": "Hello World"
+        "command": "mytools-zack.json2ts",
+        "title": "json2ts"
       }
     ],
     "menus": {
-      "explorer/context": [
+      "editor/context": [
         {
-          "command": "mytools-zack.helloWorld",
-          "group": "navigation",
-          "when": "resourceExtname == .json"
+          "command": "mytools-zack.json2ts",
+          "group": "navigation"
         }
-      ],
-	  "editor/context": [
-		  {
-			"command": "mytools-zack.helloWorld",
-			"group": "navigation"
-		  }
-	  ]
+      ]
     }
   },
   "scripts": {
@@ -46,16 +41,20 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.64.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.64.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vscode/test-electron": "^2.1.2",
     "eslint": "^8.9.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.1",
-    "typescript": "^4.5.5",
-    "@vscode/test-electron": "^2.1.2"
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "axios": "^0.26.1",
+    "json2tstool": "^1.0.7"
   }
 }
