--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@ifyour/deeplx": "^0.1.17",
     "axios": "^0.26.1",
     "dayjs": "^1.11.7",
     "front-matter": "^4.0.2",
